--- a/clientApp/src/app/members/member-card/member-card.component.html
+++ b/clientApp/src/app/members/member-card/member-card.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-4">
+<div class="card mb-2 mt-2">
     <div class="card-img-wrapper">
         <img src="{{member.mainPhotoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top"
             routerLink='/member/{{member.id}}'>
