--- a/clientApp/src/app/members/member-messages/member-messages.component.html
+++ b/clientApp/src/app/members/member-messages/member-messages.component.html
@@ -1,10 +1,11 @@
 <div class="card">
-    <div class="card-body" #scrollMe style="overflow: scroll; height: 500px;" [scrollTop]="scrollMe.scrollHeight">
+    <div class="card-body">
         <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
             No messages yet... say hi by using the message box below
         </div>
 
-        <ul *ngIf="(messageService.messageThread$ | async)?.length > 0" class="chat">
+        <ul *ngIf="(messageService.messageThread$ | async)?.length > 0" class="chat"
+            #scrollMe style="overflow: scroll; height: 500px;" [scrollTop]="scrollMe.scrollHeight">
             <li *ngFor="let message of (messageService.messageThread$ | async)">
                 <div>
                     <span class="chat-img">
