--- a/clientApp/src/app/members/member-card/member-card.component.html
+++ b/clientApp/src/app/members/member-card/member-card.component.html
@@ -1,13 +1,13 @@
 <div class="card mb-2 mt-2">
     <div class="card-img-wrapper">
         <img src="{{member.mainPhotoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top"
-            routerLink='/member/{{member.id}}'>
+            routerLink='/member/{{member.username}}'>
         <ul class="list-inline text-center member-icons animate">
-            <li class="list-inline-item"><button routerLink='/member/{{member.id}}' class="btn btn-primary"><i
+            <li class="list-inline-item"><button routerLink='/member/{{member.username}}' class="btn btn-primary"><i
                         class="fa fa-user"></i></button></li>
             <li class="list-inline-item"><button (click)="addLike(member)" class="btn btn-secondary"><i
                         class="fa fa-heart"></i></button></li>
-            <li class="list-inline-item"><button routerLink="/member/{{member.id}}" [queryParams]="{tab: 2}"
+            <li class="list-inline-item"><button routerLink="/member/{{member.username}}" [queryParams]="{tab: 2}"
                     class="btn btn-warning"><i class="fa fa-envelope"></i></button>
             </li>
         </ul>
