--- a/clientApp/src/app/members/photo-editor/photo-editor.component.html
+++ b/clientApp/src/app/members/photo-editor/photo-editor.component.html
@@ -1,15 +1,15 @@
 <div class="row">
-    <div class="col-2 d-flex flex-column" *ngFor="let photo of member.photos">
-        <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1 mb-2">        
-        <div class="d-flex">
+    <div class="col-2 d-flex flex-column" *ngFor="let photo of member.photos">                
+        <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1 mx-1">                
+        <div class="d-flex mx-1">
             <button 
-                [disabled]="photo.isMain"
+                [disabled]="photo.isMain && !photo.isApproved"        
                 (click)="setMainPhoto(photo)"
                 [ngClass]='photo.isMain ? "btn-success active" : "btn-outline-success"'
                 class="btn btn-sm flex-grow-1 mx-1"
             >Main</button>
             <button 
-                [disabled]="photo.isMain"
+                [disabled]="photo.isMain && !photo.isApproved"                
                 (click)="deletePhoto(photo)"
                 class="btn btn-sm btn-danger flex-grow-1 mx-1"
             ><i class="fa fa-trash"></i></button>
